Add selectors, bugfixes, and version 1.0.2