@@ -6,6 +6,7 @@ import org.json.JSONArray;
 import org.json.JSONObject;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -16,12 +17,14 @@ public class PresetWireds implements PresetJsonConfigurable {
     private List<PresetWiredEffect> effects;
     private List<PresetWiredTrigger> triggers;
     private List<PresetWiredAddon> addons;
+    private List<PresetWiredSelector> selectors;
 
-    public PresetWireds(List<PresetWiredCondition> conditions, List<PresetWiredEffect> effects, List<PresetWiredTrigger> triggers, List<PresetWiredAddon> addons) {
+    public PresetWireds(List<PresetWiredCondition> conditions, List<PresetWiredEffect> effects, List<PresetWiredTrigger> triggers, List<PresetWiredAddon> addons, List<PresetWiredSelector> selectors) {
         this.conditions = conditions;
         this.effects = effects;
         this.triggers = triggers;
         this.addons = addons;
+        this.selectors = selectors;
     }
 
     public PresetWireds(JSONObject object) {
@@ -34,13 +37,15 @@ public class PresetWireds implements PresetJsonConfigurable {
         triggers = object.getJSONArray("triggers").toList().stream()
                 .map(o -> new PresetWiredTrigger(new JSONObject((Map)o))).collect(Collectors.toList());
 
-        if (object.has("addons")) {
-            addons = object.getJSONArray("addons").toList().stream()
-                    .map(o -> new PresetWiredAddon(new JSONObject((Map)o))).collect(Collectors.toList());
-        }
-        else {
-            addons = new ArrayList<>();
-        }
+        addons = object.has("addons") ?
+                object.getJSONArray("addons").toList().stream()
+                        .map(o -> new PresetWiredAddon(new JSONObject((Map)o))).collect(Collectors.toList()) :
+                new ArrayList<>();
+
+        selectors = object.has("selectors") ?
+                object.getJSONArray("selectors").toList().stream()
+                        .map(o -> new PresetWiredSelector(new JSONObject((Map)o))).collect(Collectors.toList()) :
+                new ArrayList<>();
     }
 
 
@@ -52,11 +57,13 @@ public class PresetWireds implements PresetJsonConfigurable {
         JSONArray jsonEffects = new JSONArray(effects.stream().map(PresetWiredEffect::toJsonObject).collect(Collectors.toList()));
         JSONArray jsonTriggers = new JSONArray(triggers.stream().map(PresetWiredTrigger::toJsonObject).collect(Collectors.toList()));
         JSONArray jsonAddons = new JSONArray(addons.stream().map(PresetWiredAddon::toJsonObject).collect(Collectors.toList()));
+        JSONArray jsonSelectors = new JSONArray(selectors.stream().map(PresetWiredSelector::toJsonObject).collect(Collectors.toList()));
 
         object.put("conditions", jsonConditions);
         object.put("effects", jsonEffects);
         object.put("triggers", jsonTriggers);
         object.put("addons", jsonAddons);
+        object.put("selectors", jsonSelectors);
 
         return object;
     }
@@ -77,6 +84,10 @@ public class PresetWireds implements PresetJsonConfigurable {
         return addons;
     }
 
+    public List<PresetWiredSelector> getSelectors() {
+        return selectors;
+    }
+
     public void setConditions(List<PresetWiredCondition> conditions) {
         this.conditions = conditions;
     }
@@ -91,5 +102,9 @@ public class PresetWireds implements PresetJsonConfigurable {
 
     public void setAddons(List<PresetWiredAddon> addons) {
         this.addons = addons;
+    }
+
+    public void setSelectors(List<PresetWiredSelector> selectors) {
+        this.selectors = selectors;
     }
 }
